--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -68,6 +68,7 @@
         from {
             width: 0;
         }
+
         to {
             width: 100%;
         }
@@ -77,6 +78,7 @@
         from {
             opacity: 0;
         }
+
         to {
             opacity: 1;
         }
@@ -120,7 +122,7 @@
 }
 
 .dark {
-    --background: oklch(0.145 0 0);
+    --background: oklab(16.842% 0 -0.00002);
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.145 0 0);
     --card-foreground: oklch(0.985 0 0);
@@ -144,7 +146,7 @@
     --chart-3: oklch(0.769 0.188 70.08);
     --chart-4: oklch(0.627 0.265 303.9);
     --chart-5: oklch(0.645 0.246 16.439);
-    --sidebar: oklch(0.205 0 0);
+    --sidebar: oklab(16.842% 0 -0.00002);
     --sidebar-foreground: oklch(0.985 0 0);
     --sidebar-primary: oklch(0.985 0 0);
     --sidebar-primary-foreground: oklch(0.985 0 0);
